# hierarchical-reward-design-from-language

./: .gitignore  README.md  conda_env.yaml  pyproject.toml  setup_cloud.sh
Eureka/: pyproject.toml
Eureka/eureka/: eureka.py  run_eureka.py
Eureka/eureka/cfg/: config.yaml
Eureka/eureka/envs/: kitchen.py  kitchen_flatsa.py  kitchen_flatsa_obs.py  kitchen_hl.py  kitchen_hl_obs.py  kitchen_obs.py  rescue_world.py  rescue_world_flatsa.py  rescue_world_flatsa_obs.py  rescue_world_hl.py  rescue_world_hl_obs.py  rescue_world_ll.py  rescue_world_ll_obs.py  rescue_world_obs.py  thor_pnp.py  thor_pnp_flatsa.py  (+6 more)
Eureka/training/: train.py
HierRL/: run_hl.sh  run_ll.sh
HierRL/algs/: bootstrap_dqn.py  custom_td3.py  double_dqn.py  expert.py  maskable_dqn.py  per.py  train_hl.py  train_ll.py  variable_step_dqn.py
HierRL/eval/: eval_helper.py  eval_hl.py  eval_ll.py  eval_rw_pos.py  eval_subtask_seq.py  eval_survey_response.py  plots_for_paper.py  read_tfevents.py  select_best_eureka.py
HierRL/models/: cnn.py  maskable_policies.py
HierRL/train/: env_config.py  hl_train_config.py  ll_train_config.py  run_custom.py  run_flatsa.py  run_hl.py  run_hl_flatsa_eureka_parallel.py  run_hl_flatsa_eureka_parallel_nocheck.py  run_ll.py
Hierarchical-Language-Agent/agent/: pyproject.toml
Hierarchical-Language-Agent/llm-api/: server.py
Hierarchical-Language-Agent/testbed-cooking/: setup.py
rw4t/: __init__.py  map_config.py  read_demonstrations.py  rw4t_demo.py  rw4t_env.py  rw4t_game.py  rw4t_manual.py  rw4t_semi.py  rw4t_sim.py  rw4t_sim_simple.py  setup.py  utils.py
(+179 files in other folders)
